# fpg_api

./: .dockerignore  .gitignore  Choices.py  Dockerfile  Engine.py  Fixtures.py  Games.py  Players.py  README.md  Results.py  Round.py  Scores.py  Teams.py  Updates.py  docker-compose.yml  fpg_api.py  get_score.py  init_player.py  mkdocs.yml  pyproject.toml  requirements.txt  utils.py  wsgi.py
.github/workflows/: deploy.yml  deploy_api_prod.yml  deploy_api_testing.yml  deploy_uat.yml  run_test.yml
api/: Choices.py  Fixtures.py  Notifications.py  Players.py  Results.py  Scores.py
db_ddl/: call_logs.sql  choices.sql  current_round.sql  fixtures.sql  logs.sql  players.sql  results.sql  rounds.sql  scores.sql  standings.sql  teams.sql
docs/: index.md  rules.md
docs/blog/posts/: alternative.md
fpg_api/: __init__.py  app.py
fpg_api/api/: Choices.py  Fixtures.py  Notifications.py  Players.py  Results.py  Round.py  Scores.py  __init__.py  players.py  results.py  rounds.py  scores.py
fpg_api/swagger/: deactivate_notifications.yml  get_all_tokens.yml  get_available_choices.yml  get_choices.yml  get_fixtures.yml  get_player_info.yml  get_points.yml  get_previous_choices.yml  get_previous_points.yml  get_rolling_standings.yml  get_round_info.yml  get_round_results.yml  get_season_overview.yml  get_standings.yml  get_username.yml  get_weekly_info.yml  init_player.yml  make_choice.yml  update_choice.yml  update_username.yml
fpg_api/templates/: api.html  home.html  rules.html
swagger/: current_round.yml  get_available_choices.yml  get_choices.yml  get_fixtures.yml  get_player_info.yml  get_points.yml  get_previous_points.yml  get_round_info.yml  get_standings.yml  get_weekly_info.yml  init_notifications.yml  init_player.yml
templates/: index.html
test_api/: __init__.py  test_e2e.py  test_get_available_scores.py  test_get_current_round.py  test_utils.py
