[project]
name = "fpg-api"
version = "0.1.0"
description = "This Repo is the link between the FPG Database and the FPG front end"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flasgger>=0.9.7.1",
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "gunicorn>=23.0.0",
    "mkdocs-material>=9.6.15",
    "mysql-connector-python>=9.3.0",
    "pandas>=2.2.3",
    "pymdown-extensions>=10.16",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "sqlalchemy>=2.0.40",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test_api"]

[tool.ruff]
lint.extend-select = [
    "ALL"
]

lint.ignore = [
    "Q000", 
    "Q002", 
    "ANN001",
    "ANN201",
    "FBT003",
    "FBT002", 
    "D213",
    "D211",
    "N999",
    "S101",
]

# Allow lines to be as long as 100.
line-length = 100

# Group violations by containing file.
output-format = "grouped"
